# bento-rust-sdk

./: .env  Cargo.toml  README.MD
bento/: Cargo.toml
bento/src/: broadcast.rs  client.rs  commands.rs  config.rs  email.rs  error.rs  event.rs  experimental.rs  field.rs  lib.rs  stats.rs  subscriber.rs  tag.rs  test_utils.rs  types.rs
examples/: Cargo.toml
examples/src/: main.rs
